cabal-version:      2.4
name:               jhm
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

bug-reports: https://github.com/Xertes0/jhm/issues

license:            Zlib
author:             Piotr Stefański
maintainer:         stefanskipiotr15@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md,
                    LICENSE.txt

executable jhm
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      binary >= 0.8.9.0,
                      bytestring >= 0.11.4.0,
                      transformers >= 0.5.6.2,
                      utf8-string >= 1.0.2
    hs-source-dirs:   app
    default-language: Haskell2010
